# KalaServer

./: .gitignore  CMakeLists.txt  LICENSE.md  build_all.bat  build_debug.bat  build_release.bat  kalaserver_start.bat  readme.md  script_clean_rebuild.bat  script_regular_build.bat  todo.txt
KalaServer/: http_server.cpp  http_server.hpp
KalaServer/include/: cloudflare.hpp  core.hpp  dns.hpp  server.hpp
KalaServer/include/core/: core.hpp  mimetype.hpp  server.hpp
KalaServer/include/dns/: cloudflare.hpp
KalaServer/include/response/: response.hpp  response_200.hpp  response_403.hpp  response_404.hpp  response_418.hpp  response_500.hpp  response_banned.hpp  response_ok.hpp
KalaServer/src/: cloudflare.cpp  core.cpp  dns.cpp  server.cpp
KalaServer/src/core/: core.cpp  server.cpp
KalaServer/src/dns/: cloudflare.cpp  dns.cpp
KalaServer/src/response/: response.cpp  response_200.cpp  response_206.cpp  response_403.cpp  response_404.cpp  response_418.cpp  response_500.cpp  response_banned.cpp  response_ok.cpp
docs/: email-app-password.md  fixed_string.md
docs/connect/: global-cloudflared-access.md  global-port-forward-access.md  local-access.md  local-domain-access.md
example/: CMakeLists.txt  banned-ips.txt  blacklisted-keywords.txt  config.yml  main.cpp  whitelisted-ips.txt
example/content/: about.html  admin.css  admin.html  admin.js  banned-ips.txt  blacklisted-keywords.txt  index.html  music.html  videos.html  whitelisted-extensions.txt
example/content/pages/errors/: 418.html
example/static/: about.html  index.html
include/core/: client.hpp  event.hpp  server.hpp
miniweb/: http_server.cpp  http_server.hpp
src/core/: client.cpp  core.cpp  event.cpp  server.cpp
src/dns/: cloudflare.cpp  dns.cpp
src/event/: event_banclient.cpp  event_createpopup.cpp  event_healthping.cpp  event_printconsolemessage.cpp  event_sendemail.cpp
src/response/: response.cpp  response_200.cpp  response_206.cpp  response_400.cpp  response_401.cpp  response_403.cpp  response_404.cpp  response_405.cpp  response_413.cpp  response_418.cpp  response_500.cpp  response_download.cpp
